--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,7 @@
             });
         }
         
+        // 페이지 최초 로딩 시 '솔루션·서비스' 콘텐츠를 기본으로 표시
         loadContent('solutionservice.md');
       });
     </script>
