--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,13 +2,12 @@
 <html lang="ko">
   {%- include head.html -%}
   <body>
-    <main>
-      {{ content }}
-    </main>
+    {{ content }}
+
     <script>
       document.addEventListener('DOMContentLoaded', function() {
         const contentArea = document.getElementById('content-area');
-        const subMenu = document.getElementById('content-1-section');
+        const subMenu = document.getElementById('content-section');
         const subMenuLinks = subMenu ? subMenu.querySelectorAll('a') : [];
 
         function updateActiveMenu(activeId) {
@@ -45,7 +44,6 @@
             });
         }
         
-        // 페이지 최초 로딩 시 '솔루션·서비스' 콘텐츠를 기본으로 표시
         loadContent('solutionservice.md');
       });
     </script>
