--- a/_includes/head.html
+++ b/_includes/head.html
@@ -61,8 +61,8 @@
       background-color: var(--border-color);
       text-decoration: none;
     }
-    #notion-section ul, #media-section ul { list-style: none; padding: 0; max-width: 100%; }
-    #notion-section li, #media-section li { margin-bottom: 1em; padding: 1.2em; border: 1px solid var(--border-color); border-radius: 8px; background-color: #ffffff; }
+    #notion-section ul, #media-section figure { list-style: none; padding: 0; max-width: 100%; }
+    #notion-section li, #media-section figcaption { margin-bottom: 1em; padding: 1.2em; border: 1px solid var(--border-color); border-radius: 8px; background-color: #ffffff; }
     #current-time { text-align: center; margin-bottom: 2em; font-size: 1em; color: var(--text-muted-color); }
 
     /* 로고 슬라이더 */
