--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,7 +61,7 @@
               if (targetLink && targetLink.id && !targetLink.classList.contains('active-menu')) {
                 e.preventDefault();
                 let mdFile = '';
-                if (targetLink.id === 'menu-servicesolution') mdFile = 'solutionservice.md';
+                if (targetLink.id === 'menu-servicesolution') mdFile = 'servicesolution.md';
                 if (targetLink.id === 'menu-techvision') mdFile = 'techvision.md';
                 if (targetLink.id === 'menu-ceoinsight') mdFile = 'ceoinsight.md';
                 if (mdFile) loadContent(mdFile);
