--- a/_includes/head.html
+++ b/_includes/head.html
@@ -130,4 +130,6 @@
     @keyframes slide { from { transform: translateX(0); } to { transform: translateX(-50%); } }
     .slider-track:hover { animation-play-state: paused; }
   </style>
+  <script>window.gtranslateSettings = {"default_language":"ko","languages":["ko","en"],"wrapper_selector":".gtranslate_wrapper","switcher_horizontal_position":"right","switcher_vertical_position":"top"}</script>
+  <script src="https://cdn.gtranslate.net/widgets/latest/float.js" defer></script>
 </head>
